# data-ingestion

./: .env.example  README.MD  app.py  docker-compose.yml  makefile  pyproject.toml
core/: data_processing.py
tests/: test_data_processing.py
