[tool.poetry]
name = "data_pipeline"
version = "0.1.0"
description = ""
authors = ["felipesaadi <felipesaadisiegert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
minio = "^7.2.8"
clickhouse-connect = "^0.7.19"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
marshmallow = "^3.22.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
